@startuml
skinparam classAttributeIconSize 0
skinparam linetype ortho

class Passageiro {
  - id: int
  - nome: String
  - cpf: String
  - telefone: String
  - login: String
  - senha: String
}

class EmpresaAerea {
  - id: int
  - nome: String
  - cnpj: String
  - telefone: String
}

class Aeronave {
  - modelo: String
  - capacidade: int
}

class Voo {
  - numeroVoo: String
  - origem: String
  - destino: String
  - dataHora: LocalDateTime
  - precoBase: double
  - assentosDisponiveis: int
  - aeronave: Aeronave
  + calcularPrecoFinal(): double
  + reservarAssento(): boolean
}

class VooNacional {
  - taxaEmbarque: double
}

class VooInternacional {
  - taxaAlfandega: double
}

class Passagem {
  - id: int
  - passageiro: Passageiro
  - voo: Voo
  - assento: String
  - precoPago: double
  + getAssento(): String
}

' Relações
Passagem --> Passageiro
Passagem --> Voo
Voo --> EmpresaAerea
Voo --> Aeronave
Voo <|-- VooNacional
Voo <|-- VooInternacional

@enduml
